welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value ab
  var d=ab
        ^blueTicket:3: error: not found: value bc
  var e=bc
        ^blueTicket:4: error: not found: value ac
  var f=ac
        ^