welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
  var d=ab
  var e=bc
  var f=ac
  if (d==10 || e==10 || f==10) {
    return 10
  } else if (d-e==10 || d-f==10) {
    return 5
  } else return 0
}